/* (C)2026 */
package com.vinculohub.backend.model;

import com.vinculohub.backend.model.enums.ProjectStatus;
import com.vinculohub.backend.model.enums.ProjectType;
import jakarta.persistence.*;
import java.math.BigDecimal;
import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.LinkedHashSet;
import java.util.Set;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.SQLRestriction;
import org.hibernate.annotations.UpdateTimestamp;

@Entity
@Table(name = "project")
@SQLRestriction("deleted_at IS NULL")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Project {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @JoinColumn(name = "npo_id", nullable = false)
    private Npo npo;

    @Column(nullable = false, length = 255)
    private String title;

    @Column(nullable = false, length = 1000)
    private String description;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false, length = 20)
    @Builder.Default
    private ProjectStatus status = ProjectStatus.ACTIVE;

    @Enumerated(EnumType.STRING)
    @Column(name = "project_type", length = 30)
    private ProjectType type;

    @Column(name = "budget_needed", precision = 15, scale = 2)
    private BigDecimal budgetNeeded;

    @Column(name = "invested_amount", precision = 15, scale = 2)
    private BigDecimal investedAmount;

    @ManyToMany(fetch = FetchType.LAZY)
    @JoinTable(
            name = "project_ods",
            joinColumns = @JoinColumn(name = "project_id"),
            inverseJoinColumns = @JoinColumn(name = "ods_id"))
    @Builder.Default
    private Set<Ods> ods = new LinkedHashSet<>();

    @Column(name = "start_date")
    private LocalDate startDate;

    @Column(name = "end_date")
    private LocalDate endDate;

    @Column(name = "focus_area", length = 50)
    private String focusArea;

    @Column(name = "fundraising_deadline", length = 50)
    private String fundraisingDeadline;

    @Column(name = "beneficiaries_count")
    private Integer beneficiariesCount;

    @Column(name = "location", length = 255)
    private String location;

    @Column(name = "main_objective", length = 600)
    private String mainObjective;

    @CreationTimestamp
    @Column(name = "created_at", updatable = false)
    private LocalDateTime createdAt;

    @UpdateTimestamp
    @Column(name = "updated_at")
    private LocalDateTime updatedAt;

    @Column(name = "deleted_at")
    private LocalDateTime deletedAt;
}
