CREATE TYPE "npo_size" AS ENUM (
  'large',
  'medium',
  'small'
);

CREATE TYPE "user_type" AS ENUM (
  'admin',
  'npo',
  'company'
);

CREATE TYPE "project_status" AS ENUM (
  'active',
  'completed',
  'cancelled'
);

CREATE TYPE "relationship_status" AS ENUM (
  'pending',
  'active',
  'inactive',
  'negotiation'
);

CREATE TYPE "project_type" AS ENUM (
  'social_investment_law',
  'tax_incentive_law'
);

CREATE TABLE "user" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(255),
  "email" varchar(255) UNIQUE,
  "user_type" user_type,
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "address" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "state" varchar(50),
  "state_code" char(2),
  "city" varchar(50),
  "street" varchar(100),
  "number" varchar(20),
  "complement" varchar(100),
  "zip_code" varchar(10),
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "sdg" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(50)
);

CREATE TABLE "npo" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(255),
  "user_id" integer UNIQUE,
  "description" varchar(3000),
  "logo_url" varchar(500),
  "npo_size" npo_size,
  "cnpj" varchar(18) UNIQUE,
  "cpf" varchar(14) UNIQUE,
  "phone" varchar(30),
  "address_id" integer,
  "environmental" boolean,
  "social" boolean,
  "governance" boolean,
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "company" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "legal_name" varchar(255),
  "social_name" varchar(255),
  "user_id" integer UNIQUE,
  "description" varchar(1000),
  "logo_url" varchar(500),
  "cnpj" varchar(18) UNIQUE,
  "phone" varchar(30),
  "address_id" integer,
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "project" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "npo_id" integer,
  "title" varchar(255),
  "description" varchar(3000),
  "status" project_status DEFAULT 'active',
  "budget_needed" decimal(15,2),
  "invested_amount" decimal(15,2),
  "start_date" date,
  "end_date" date,
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "document" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "npo_id" integer,
  "project_id" integer,
  "title" varchar(255),
  "description" varchar(500),
  "file_url" varchar(500),
  "file_name" varchar(255),
  "file_size" integer,
  "mime_type" varchar(100),
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp,
  "expired_at" timestamp
);

CREATE TABLE "edital" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "title" varchar(255),
  "description" varchar(500),
  "file_url" varchar(500),
  "file_name" varchar(255),
  "file_size" integer,
  "mime_type" varchar(100),
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp
);

CREATE TABLE "project_sdg" (
  "project_id" integer,
  "sdg_id" integer,
  PRIMARY KEY ("project_id", "sdg_id")
);

CREATE TABLE "company_project" (
  "company_id" integer,
  "project_id" integer,
  "status" relationship_status DEFAULT 'pending',
  "created_at" timestamp,
  "updated_at" timestamp,
  "deleted_at" timestamp,
  PRIMARY KEY ("company_id", "project_id")
);

CREATE INDEX ON "npo" ("address_id");

CREATE INDEX ON "npo" ("user_id");

CREATE INDEX ON "company" ("address_id");

CREATE INDEX ON "company" ("user_id");

CREATE INDEX ON "project" ("npo_id");

CREATE INDEX ON "document" ("npo_id");

CREATE INDEX ON "document" ("project_id");

ALTER TABLE "npo" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "npo" ADD FOREIGN KEY ("address_id") REFERENCES "address" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "company" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "company" ADD FOREIGN KEY ("address_id") REFERENCES "address" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project" ADD FOREIGN KEY ("npo_id") REFERENCES "npo" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "document" ADD FOREIGN KEY ("npo_id") REFERENCES "npo" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "document" ADD FOREIGN KEY ("project_id") REFERENCES "project" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project_sdg" ADD FOREIGN KEY ("project_id") REFERENCES "project" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "project_sdg" ADD FOREIGN KEY ("sdg_id") REFERENCES "sdg" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "company_project" ADD FOREIGN KEY ("company_id") REFERENCES "company" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "company_project" ADD FOREIGN KEY ("project_id") REFERENCES "project" ("id") DEFERRABLE INITIALLY IMMEDIATE;